test/error/formatwildcardform1.luau
print(string.format("test%.*", "yyea"))